Added a new class and modified the site font.

--- a/index.html
+++ b/index.html
@@ -11,18 +11,28 @@
     in highes supported document mode -->
      <meta name="keywords" content="web design, bilal masters, bilal, masters, portfolio, affordable web design, urban, urban global, urban global.net, urban freelancer, freelancer, freelancers, professional web design, web development, development, Urban, Urban Freelancer, web design company, web development company">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="CSS/reset.css">
-    <link rel="stylesheet" type="text/css" href="CSS/home.css">
     <link rel="stylesheet" type="text/css" href="CSS/main.css">
-    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <link rel="stylesheet" type="text/css" href="CSS/animate.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.slim.min.js"></script>
 </head>
-<body class="home">
-<header>
-    <h1>My Portfolio</h1>
-</header>
+<body>
+<section id="top">
+ 
+   <div class="info">
+       <div class="colored-square"></div>
+        <h1>Bilal Masters</h1>
+    <p>Web Developer</p>
+    <a href="#">Latest Works</a>
+   </div>
+   
+   <div class="img">
+   <div class="background-img"></div>
+
+   </div>
+    
+    
+</section>
 
 <script type="text/javascript" src="Js/main.js"></script>
 <script type="text/javascript" src="Js/app.js"></script>
