--- a/index.html
+++ b/index.html
@@ -76,7 +76,24 @@
            
     </div>
     </div>
-    
+</section>
+
+<section id="portfolio">
+    <div class="container">
+        <div class="title">
+        <div class="colored-square-2"></div>
+        <h1>Portflio</h1>
+        </div>
+    <div class="portfolio-container">
+          <a href="#"class="panel image-1"></a>
+          <a href="#" class="panel image-2"></a>
+          <a href="#" class="panel image-3"></a>
+          <a href="#" class="panel image-4"></a>
+          <a href="#" class="panel image-5"></a>
+          <a href="#" class="panel image-6"></a>
+          <a href="#" class="panel image-7"></a>
+    </div>
+    </div>
 </section>
 
 <script type="text/javascript" src="Js/main.js"></script>
