Saving changes to multiple files.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <meta name="keywords" content="web design, bilal masters, bilal, masters, portfolio, affordable web design, urban, urban global, urban global.net, urban freelancer, freelancer, freelancers, professional web design, web development, development, Urban, Urban Freelancer, web design company, web development company">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="CSS/main.css">
+    <link rel="stylesheet" type="text/css" href="CSS/hovereffect.css">
     <link rel="stylesheet" type="text/css" href="CSS/animate.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.slim.min.js"></script>
@@ -31,7 +32,7 @@
  </div>  
 </section>
 
-<section id="services">
+<section id="services" class="section-padding">
     <div class="container">
         <div class="title">
         <div class="colored-circle"></div>
@@ -80,22 +81,239 @@
     </div>
 </section>
 
-<section id="portfolio">
+<section id="portfolio" class="section-padding">
     <div class="container">
         <div class="title">
         <div class="colored-square-2"></div>
         <h1>Portflio</h1>
         </div>
     <div class="portfolio-container">
-          <a href="#" class="panel image-1"></a>
-          <a href="#" class="panel image-2"></a>
-          <a href="#" class="panel image-3"></a>
-          <a href="#" class="panel image-4"></a>
-          <a href="#" class="panel image-5"></a>
-          <a href="#" class="panel image-6"></a>
-          <a href="#" class="panel image-7"></a>
-          <a href="#" class="panel image-8"></a>
-          <a href="#" class="panel image-9"></a>
+          <div class="hovereffect panel image-1">
+             <img class="center img-responsive" src="https://media2.giphy.com/media/mGa21upCtL8cw/giphy.gif" alt="flat-design">
+                 <h2>Ecommerce</h2>
+                  <div class="overlay">
+                     <h2></h2>
+                      <p class="set1">
+                    <a href="#">
+                        <i class="fab fa-html5"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-css3-alt"></i>
+                    </a>
+                </p>
+                <hr>
+                <hr>
+                <p class="set2">
+                    <a href="#">
+                        <i class="fab fa-js"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-php"></i>
+                    </a>
+                </p>
+                  </div>
+          </div>
+          <div class="hovereffect panel image-2">
+             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
+                 <h2>Ecommerce</h2>
+                  <div class="overlay">
+                     <h2></h2>
+                      <p class="set1">
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </p>
+                <hr>
+                <hr>
+                <p class="set2">
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                </p>
+                  </div>
+          </div>
+          <div class="hovereffect panel image-3">
+             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
+                 <h2>Ecommerce</h2>
+                  <div class="overlay">
+                     <h2></h2>
+                      <p class="set1">
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </p>
+                <hr>
+                <hr>
+                <p class="set2">
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                </p>
+                  </div>
+          </div>
+          <div class="hovereffect panel image-4">
+             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
+                 <h2>Ecommerce</h2>
+                  <div class="overlay">
+                     <h2></h2>
+                      <p class="set1">
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </p>
+                <hr>
+                <hr>
+                <p class="set2">
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                </p>
+                  </div>
+          </div>
+          <div class="hovereffect panel image-5">
+             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
+                 <h2>Ecommerce</h2>
+                  <div class="overlay">
+                     <h2></h2>
+                      <p class="set1">
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </p>
+                <hr>
+                <hr>
+                <p class="set2">
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                </p>
+                  </div>
+          </div>
+          <div class="hovereffect panel image-6">
+             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
+                 <h2>Ecommerce</h2>
+                  <div class="overlay">
+                     <h2></h2>
+                      <p class="set1">
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </p>
+                <hr>
+                <hr>
+                <p class="set2">
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                </p>
+                  </div>
+          </div>
+          <div class="hovereffect panel image-7">
+             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
+                 <h2>Ecommerce</h2>
+                  <div class="overlay">
+                     <h2></h2>
+                      <p class="set1">
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </p>
+                <hr>
+                <hr>
+                <p class="set2">
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                </p>
+                  </div>
+          </div>
+          <div class="hovereffect panel image-8">
+             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
+                 <h2>Ecommerce</h2>
+                  <div class="overlay">
+                     <h2></h2>
+                      <p class="set1">
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </p>
+                <hr>
+                <hr>
+                <p class="set2">
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                </p>
+                  </div>
+          </div>
+          <div class="hovereffect panel image-9">
+             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
+                 <h2>Ecommerce</h2>
+                  <div class="overlay">
+                     <h2></h2>
+                      <p class="set1">
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </p>
+                <hr>
+                <hr>
+                <p class="set2">
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                </p>
+                  </div>
+          </div>
+          
     </div>
     </div>
 </section>
