Changes made to portfolio section.

--- a/index.html
+++ b/index.html
@@ -89,228 +89,156 @@
         </div>
     <div class="portfolio-container">
           <div class="hovereffect panel image-1">
-             <img class="center img-responsive" src="https://media2.giphy.com/media/mGa21upCtL8cw/giphy.gif" alt="flat-design">
-                 <h2>Ecommerce</h2>
+             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
                   <div class="overlay">
-                     <h2></h2>
-                      <p class="set1">
+                      <a href="#"><h2>Ecommerce</h2></a>
+                      <p class="icon-links">
                     <a href="#">
-                        <i class="fab fa-html5"></i>
+                        <i class="fas fa-door-open"></i>
                     </a>
                     <a href="#">
                         <i class="fab fa-css3-alt"></i>
                     </a>
-                </p>
-                <hr>
-                <hr>
-                <p class="set2">
-                    <a href="#">
-                        <i class="fab fa-js"></i>
-                    </a>
                     <a href="#">
                         <i class="fab fa-php"></i>
                     </a>
-                </p>
+                    </p>
                   </div>
           </div>
           <div class="hovereffect panel image-2">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                 <h2>Ecommerce</h2>
                   <div class="overlay">
-                     <h2></h2>
-                      <p class="set1">
+                    <a href="#"><h2>Ecommerce</h2></a>
+                      <p class="icon-links">
                     <a href="#">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-php"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                </p>
-                <hr>
-                <hr>
-                <p class="set2">
-                    <a href="#">
-                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-css3-alt"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-dribbble"></i>
+                        <i class="fab fa-php"></i>
                     </a>
-                </p>
+                    </p>
                   </div>
           </div>
           <div class="hovereffect panel image-3">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                 <h2>Ecommerce</h2>
                   <div class="overlay">
-                     <h2></h2>
-                      <p class="set1">
+                      <a href="#"><h2>Ecommerce</h2></a>
+                      <p class="icon-links">
                     <a href="#">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-php"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                </p>
-                <hr>
-                <hr>
-                <p class="set2">
-                    <a href="#">
-                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-css3-alt"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-dribbble"></i>
+                        <i class="fab fa-php"></i>
                     </a>
-                </p>
+                    </p>
                   </div>
           </div>
           <div class="hovereffect panel image-4">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                 <h2>Ecommerce</h2>
                   <div class="overlay">
-                     <h2></h2>
-                      <p class="set1">
+                      <a href="#"><h2>Ecommerce</h2></a>
+                      <p class="icon-links">
                     <a href="#">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-php"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                </p>
-                <hr>
-                <hr>
-                <p class="set2">
-                    <a href="#">
-                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-css3-alt"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-dribbble"></i>
+                        <i class="fab fa-php"></i>
                     </a>
-                </p>
+                    </p>
                   </div>
           </div>
           <div class="hovereffect panel image-5">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                 <h2>Ecommerce</h2>
                   <div class="overlay">
-                     <h2></h2>
-                      <p class="set1">
+                      <a href="#"><h2>Ecommerce</h2></a>
+                      <p class="icon-links">
                     <a href="#">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-php"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                </p>
-                <hr>
-                <hr>
-                <p class="set2">
-                    <a href="#">
-                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-css3-alt"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-dribbble"></i>
+                        <i class="fab fa-php"></i>
                     </a>
-                </p>
+                    </p>
                   </div>
           </div>
           <div class="hovereffect panel image-6">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                 <h2>Ecommerce</h2>
                   <div class="overlay">
-                     <h2></h2>
-                      <p class="set1">
+                      <a href="#"><h2>Ecommerce</h2></a>
+                      <p class="icon-links">
                     <a href="#">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-php"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                </p>
-                <hr>
-                <hr>
-                <p class="set2">
-                    <a href="#">
-                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-css3-alt"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-dribbble"></i>
+                        <i class="fab fa-php"></i>
                     </a>
-                </p>
+                    </p>
                   </div>
           </div>
           <div class="hovereffect panel image-7">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                 <h2>Ecommerce</h2>
                   <div class="overlay">
-                     <h2></h2>
-                      <p class="set1">
+                      <a href="#"><h2>Ecommerce</h2></a>
+                      <p class="icon-links">
                     <a href="#">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-php"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                </p>
-                <hr>
-                <hr>
-                <p class="set2">
-                    <a href="#">
-                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-css3-alt"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-dribbble"></i>
+                        <i class="fab fa-php"></i>
                     </a>
-                </p>
+                    </p>
                   </div>
           </div>
           <div class="hovereffect panel image-8">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                 <h2>Ecommerce</h2>
                   <div class="overlay">
-                     <h2></h2>
-                      <p class="set1">
+                      <a href="#"><h2>Ecommerce</h2></a>
+                      <p class="icon-links">
                     <a href="#">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-php"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                </p>
-                <hr>
-                <hr>
-                <p class="set2">
-                    <a href="#">
-                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-css3-alt"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-dribbble"></i>
+                        <i class="fab fa-php"></i>
                     </a>
-                </p>
+                    </p>
                   </div>
           </div>
           <div class="hovereffect panel image-9">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                 <h2>Ecommerce</h2>
                   <div class="overlay">
-                     <h2></h2>
-                      <p class="set1">
+                      <a href="#"><h2>Ecommerce</h2></a>
+                      <p class="icon-links">
                     <a href="#">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-php"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                </p>
-                <hr>
-                <hr>
-                <p class="set2">
-                    <a href="#">
-                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-css3-alt"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-dribbble"></i>
+                        <i class="fab fa-php"></i>
                     </a>
-                </p>
+                    </p>
                   </div>
           </div>
           
