Changes made to portfolio section.

--- a/index.html
+++ b/index.html
@@ -89,155 +89,83 @@
         </div>
     <div class="portfolio-container">
           <div class="hovereffect panel image-1">
-             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
+             <img class="center img-responsive" src="Img/6.png" alt="flat-design">
                   <div class="overlay">
-                      <a href="#"><h2>Ecommerce</h2></a>
+                      <h2>Ecommerce</h2>
                       <p class="icon-links">
-                    <a href="#">
-                        <i class="fas fa-door-open"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-css3-alt"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
+                    <a href="#">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-2">
-             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                  <div class="overlay">
-                    <a href="#"><h2>Ecommerce</h2></a>
+             <img class="center img-responsive" src="Img/6.png" alt="flat-design">
+                   <div class="overlay">
+                      <h2>Ecommerce</h2>
                       <p class="icon-links">
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-css3-alt"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
+                    <a href="#">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-3">
-             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                  <div class="overlay">
-                      <a href="#"><h2>Ecommerce</h2></a>
+             <img class="center img-responsive" src="Img/6.png" alt="flat-design">
+                   <div class="overlay">
+                      <h2>Ecommerce</h2>
                       <p class="icon-links">
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-css3-alt"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
+                    <a href="#">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-4">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                  <div class="overlay">
-                      <a href="#"><h2>Ecommerce</h2></a>
+                   <div class="overlay">
+                      <h2>Ecommerce</h2>
                       <p class="icon-links">
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-css3-alt"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
+                    <a href="#">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-5">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                  <div class="overlay">
-                      <a href="#"><h2>Ecommerce</h2></a>
+                   <div class="overlay">
+                      <h2>Ecommerce</h2>
                       <p class="icon-links">
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-css3-alt"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
+                    <a href="#">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-6">
              <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                  <div class="overlay">
-                      <a href="#"><h2>Ecommerce</h2></a>
+                   <div class="overlay">
+                      <h2>Ecommerce</h2>
                       <p class="icon-links">
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-css3-alt"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
+                    <a href="#">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-7">
-             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                  <div class="overlay">
-                      <a href="#"><h2>Ecommerce</h2></a>
+             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
+                   <div class="overlay">
+                      <h2>Ecommerce</h2>
                       <p class="icon-links">
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-css3-alt"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
+                    <a href="#">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-8">
-             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                  <div class="overlay">
-                      <a href="#"><h2>Ecommerce</h2></a>
+             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
+                   <div class="overlay">
+                      <h2>Ecommerce</h2>
                       <p class="icon-links">
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-css3-alt"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
+                    <a href="#">Take a look</a>
                     </p>
                   </div>
           </div>
           <div class="hovereffect panel image-9">
-             <img class="center img-responsive" src="Img/flat-design.jpg" alt="flat-design">
-                  <div class="overlay">
-                      <a href="#"><h2>Ecommerce</h2></a>
+             <img class="center img-responsive" src="Img/4.png" alt="flat-design">
+                   <div class="overlay">
+                      <h2>Ecommerce</h2>
                       <p class="icon-links">
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-css3-alt"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-php"></i>
-                    </a>
+                    <a href="#">Take a look</a>
                     </p>
                   </div>
           </div>
