Changes made to multiple files.

--- a/index.html
+++ b/index.html
@@ -301,7 +301,6 @@
         <div class="talkbubble"></div>
         <h1>Testimonials</h1>
         </div>
-        </div>
         <div class="testimonial-container">
             <div class="test-left">
                 <div class="hover-bg">
@@ -310,8 +309,13 @@
             </div>
             
             <div class="test-center">
-                <div class="info">
-                    <img src="Img/" alt="customer-pic">
+                <div class="test-center-hdr">
+                    <img src="Img/" alt="customer-pic"/>
+                    <div class="customer-info">
+                        <h3>Customer Name</h3>
+                        <span>Customer Title/Position</span>
+                        <p>Custmer's comment about the service.</p>
+                    </div>
                 </div>
             </div>
             
@@ -320,6 +324,7 @@
                 <div class="name">Coming Soon!</div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 <script type="text/javascript" src="Js/main.js"></script>
