Added the logo and header menu.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.slim.min.js"></script>
 </head>
 <body>
+<!-- Menu -->
+<header>
+    <div class="logo">
+        <img src="Img/vectorstock_20681631.jpg" alt="Logo"/> 
+    </div>
+    <div class="header-menu">
+        <a href="index.html">Home</a>
+        <a href="#services-section">Services</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#experience-section">Experience</a>
+        <a href="#blog-section">Blog</a>
+        <a href="#testimonial-section">Testimonials</a>
+    </div>
+</header>
+<!--
+<div class="mobile-menu active">
+        <a href="index.html">Home</a>
+        <a href="#services-section">Services</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#experience-section">Experience</a>
+        <a href="#blog-section">Blog</a>
+        <a href="#testimonial-section">Testimonials</a>
+    </div>
 <!-- Top Section -->
 <section id="top">
  <div class="container">
