Adding mobile menu.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <a href="#blog-section">Blog</a>
         <a href="#testimonial-section">Testimonials</a>
     </div>
+    <div class="menu-btn">
+        <i class="fas fa-bars"></i>
+    </div>
 </header>
 <!--
 <div class="mobile-menu active">
