--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <!-- Menu -->
-<header>
+<header class="sticky">
     <div class="logo">
         <img src="Img/vectorstock_20681631.jpg" alt="Logo"/> 
     </div>
