--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <i class="fas fa-bars"></i>
     </div>
 </header>
-<!--
-<div class="mobile-menu active">
+<!-- Mobile Menu -->
+<div class="mobile-menu">
         <a href="index.html">Home</a>
         <a href="#services-section">Services</a>
         <a href="#portfolio">Portfolio</a>
