Changes made to page countdown html, css and js files.

--- a/PageCountdown/countdown.html
+++ b/PageCountdown/countdown.html
@@ -29,7 +29,7 @@
 <section class="landing">
     <div class="landing-inner">
         <i class="fa fa-users" aria-hidden="true"></i>
-        <p class="appName"><span class="primary">Masters</span> Blog</p>
+        <p class="appName"><span class="primary">Techlow</span></p>
         <p class="pageMessage">A blog site for developers</p>
         <h1 class="comingsoon">Coming Soon</h1>
         <div class="countdown"></div>
