Changes made to mobile menu.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 </header>
 <!-- Mobile Menu -->
-<div class="mobile-menu">
+<div class="mobile-menu mobile-sticky">
         <a href="index.html">Home</a>
         <a href="#services-section">Services</a>
         <a href="#portfolio">Portfolio</a>
