Added styles to project-page.html.

--- a/Portfolio/project-1.html
+++ b/Portfolio/project-1.html
@@ -47,33 +47,36 @@
       <div class="container">
         <div class="project-info">
            <div class="project-header">
-               <div class="project-image"><img src="../Img/place-holder-image.png"></div>
-               <div class="project-description">
+               <div class="project-image"><img src="../Img/place-holder-image.png">
+                <div class="project-description">
                   <h1>Limble Media</h1>
                   <p>Coming Soon!</p>
                    <div class="project-btn">
-                       <div class="btn-1"></div>
-                       <div class="btn-2"></div>
+                       <div class="btn-1"><i class="fas fa-desktop"></i><h4>View Project</h4></div>
+                       <div class="btn-2"><i class="fas fa-code"></i><h4>View Code</h4></div>
                    </div>
                </div>
+               </div>
            </div>
+        </div>
             <div class="technologies">
+                <h1>Technologies Used</h1>
             <div class="tech-icons">
                 <div class="icon-1">
-                    <img src="../Img/html-5-logo.svg.png" alt="html-5-logo">
+                    <i class="fab fa-html5"></i> 
                 </div>
                 <div class="icon-1">
-                    <img src="../Img/css3-logo.png" alt="html-5-logo">
+                    <i class="fab fa-css3-alt"></i>
                 </div>
                 <div class="icon-1">
-                    <img src="../Img/javascript.png" alt="html-5-logo">
+                    <i class="fab fa-js-square"></i>
                 </div>
                 <div class="icon-1">
-                    <img src="../Img/php-logo.jpg" alt="html-5-logo">
+                    <i class="fab fa-php"></i>
                 </div>
             </div>
         </div>
-        </div>
+        
       </div>  
     </section>
 
