Changes made to portfolio project file.

--- a/Portfolio/project-1.html
+++ b/Portfolio/project-1.html
@@ -44,41 +44,31 @@
     </div>
 <!-- Project Information -->
     <section class="portfolio-project">
-      <div class="container">
-        <div class="project-info">
-           <div class="project-header">
-               <div class="project-image"><img src="../Img/place-holder-image.png">
-                <div class="project-description">
-                  <h1>Limble Media</h1>
-                  <p>Coming Soon!</p>
-                   <div class="project-btn">
-                       <div class="btn-1"><i class="fas fa-desktop"></i><h4>View Project</h4></div>
-                       <div class="btn-2"><i class="fas fa-code"></i><h4>View Code</h4></div>
-                   </div>
-               </div>
-               </div>
-           </div>
-        </div>
+    <div class="container">
+        <div class="grid-container">
+            <div class="project-image"><img src="../Img/place-holder-image.png"></div>
+            <div class="project-description">
+                <h1>LimbleMedia</h1>
+                <p>LimbleMedia is a digital agency specializing in web design, development and email marketing content creation.</p>
+                <div class="project-btn">
+                    <div class="btn"><i class="fas fa-desktop"></i>
+                        <h4>View Project</h4></div>
+                    <div class="btn"><i class="fas fa-code"></i>
+                        <h4>View Code</h4></div>
+                </div>
+            </div>
             <div class="technologies">
                 <h1>Technologies Used</h1>
-            <div class="tech-icons">
-                <div class="icon-1">
-                    <i class="fab fa-html5"></i> 
-                </div>
-                <div class="icon-1">
-                    <i class="fab fa-css3-alt"></i>
-                </div>
-                <div class="icon-1">
-                    <i class="fab fa-js-square"></i>
-                </div>
-                <div class="icon-1">
-                    <i class="fab fa-php"></i>
+                <div class="tech-icons">
+                    <div class="icon-1"> <i class="fab fa-html5"></i> </div>
+                    <div class="icon-1"> <i class="fab fa-css3-alt"></i> </div>
+                    <div class="icon-1"> <i class="fab fa-js-square"></i> </div>
+                    <div class="icon-1"> <i class="fab fa-php"></i> </div>
                 </div>
             </div>
         </div>
-        
-      </div>  
-    </section>
+    </div>
+</section>
 
     <!-- Footer Section -->
     <footer id="footer-section">
